# A-SAT-solver

./: CMakeLists.txt  README.md
src/: cnfparser.cpp  cnfparser.hpp  main.cpp  ph.h  solver.cpp  solver.hpp
